Enhance shop tag management: extend `listShopsByFilter` with pagination, add new command generation logic in `TagService`, update language keys for clarity.