@@ -63,27 +63,7 @@ public class SubCommand_Avoid implements CommandHandler<Player> {
     }
 
     if(parser.getArgs().isEmpty()) {
-
-      final Shop shop = getLookingShop(sender);
-      if(shop == null) {
-        plugin.text().of(sender, "not-looking-at-shop").send();
-        return;
-      }
-
-      final TaggingResult result = plugin.tagManager().toggleTag(shop.getShopId(), sender.getUniqueId(), tag);
-
-      switch(result) {
-        case TaggingResult.SUCCESS -> {
-          if(plugin.tagManager().hasTag(shop.getShopId(), sender.getUniqueId(), tag)) {
-            plugin.text().of(sender, "tags.avoid.added").send();
-          } else {
-            plugin.text().of(sender, "tags.avoid.removed").send();
-          }
-        }
-        case TaggingResult.DATABASE_ERROR ->
-                plugin.text().of(sender, "tags.general.database-error").send();
-        default -> plugin.text().of(sender, "tags.avoid.unable").send();
-      }
+      avoidShop(sender, parser, tag);
       return;
     }
 
@@ -91,11 +71,39 @@ public class SubCommand_Avoid implements CommandHandler<Player> {
     switch(sub.toLowerCase(Locale.ROOT)) {
       case "list" -> {
 
-        plugin.tagManager().listShopsByFilter(sender, new ArrayList<>(List.of(tag)),
-                                                       "tags.avoid.list-title",
-                                                       "tags.avoid.none");
+        final int page = (parser.getArgs().size() >= 2)? Integer.parseInt(parser.getArgs().get(1)) : 1;
+
+        plugin.tagManager().listShopsByFilter(sender, commandLabel, page,
+                                              new ArrayList<>(List.of(tag)),
+                                              "avoid",
+                                              "tags.tag.title-avoided-shops",
+                                              "tags.avoid.none");
       }
-      default -> sendUsage(sender);
+      default -> avoidShop(sender, parser, tag);
+    }
+  }
+
+  private void avoidShop(final Player sender, final CommandParser parser, final String tag) {
+
+    final Shop shop = findShop(sender, parser, 0);
+    if(shop == null) {
+      plugin.text().of(sender, "not-looking-at-shop").send();
+      return;
+    }
+
+    final TaggingResult result = plugin.tagManager().toggleTag(shop.getShopId(), sender.getUniqueId(), tag);
+
+    switch(result) {
+      case TaggingResult.SUCCESS -> {
+        if(plugin.tagManager().hasTag(shop.getShopId(), sender.getUniqueId(), tag)) {
+          plugin.text().of(sender, "tags.avoid.added").send();
+        } else {
+          plugin.text().of(sender, "tags.avoid.removed").send();
+        }
+      }
+      case TaggingResult.DATABASE_ERROR ->
+              plugin.text().of(sender, "tags.general.database-error").send();
+      default -> plugin.text().of(sender, "tags.avoid.unable").send();
     }
   }
 
@@ -106,13 +114,13 @@ public class SubCommand_Avoid implements CommandHandler<Player> {
                                     @NotNull final CommandParser parser) {
 
     if(parser.getArgs().size() == 1) {
-      return List.of("list");
+
+      return List.of(plugin.text().of(sender, "tabcomplete.list").legacy(),
+                     plugin.text().of(sender, "tabcomplete.shop-id").legacy());
+    } else if(parser.getArgs().size() == 2) {
+
+      return Collections.singletonList(plugin.text().of(sender, "tabcomplete.page").legacy());
     }
     return Collections.emptyList();
-  }
-
-  private void sendUsage(final Player sender) {
-
-    plugin.text().of(sender, "command-incorrect", "/quickshop avoid [list]").send();
   }
 }
